# PasteShare

./: .env.dev  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 17cd544456c0_add_language.py  e889e97533a9_init.py  e9fca36d5ae9_add_paste_and_comment_models.py  f22902959a25_add_category.py
pasteshare/: __main__.py  main.py
pasteshare/api/: __init__.py  dependencies.py
pasteshare/api/v1/: auth.py  category.py  comment.py  language.py  paste.py  user.py
pasteshare/core/: __init__.py  application.py  broker.py  cache.py  config.py  constants.py  exceptions.py  logger.py  security.py  templates.py
pasteshare/core/database/: __init__.py  dependencies.py  manager.py
pasteshare/core/models/: __init__.py  base.py  category.py  comment.py  language.py  paste.py  users.py
pasteshare/core/models/mixins/: __init__.py  time_stamp.py  uuid_pk.py
pasteshare/core/repository/: __init__.py  category.py  comment.py  language.py  paste.py  sqlalchemy_repository.py  user.py
pasteshare/core/repository/base/: __init__.py
pasteshare/core/repository/interface/: __init__.py  base.py
pasteshare/core/schemas/: __init__.py  auth.py  base.py  category.py  comment.py  language.py  paste.py  user.py
pasteshare/mainling/: send_message.py  send_welcome_email.py
pasteshare/tasks/: __init__.py  welcome_email_notification.py
pasteshare/utils/: __init__.py
pasteshare/web/: __init__.py  router.py
static/assets/css/: styles.css
static/assets/js/: app.js
templates/mail/: welcome_message.html
templates/web/: index.html
